--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -103,7 +103,7 @@ nav a {
 
 nav a:hover,
 nav a.active {
-    background: #274c77;
+    background: var(--secondary-color);
     color: white;
 }
 
